desktop-themes/BlueMenta/gtk-3.0/gtk-widgets.css
/* ... */
.notebook.arrow:backdrop:insensitive {
    color: #c7c7c7;
}

/**************
 * ComboBoxes *
 **************/
GtkComboBox {
	padding: 0;

	-GtkComboBox-arrow-scaling: 0.5;
	-GtkComboBox-shadow-type: none;

	text-shadow: 0 1px @button_text_shadow;
}

GtkComboBox:insensitive {
	text-shadow: none;
	color: @insensitive_fg_color;
}

GtkComboBox .separator {
	/* always disable separators */
	-GtkWidget-wide-separators: true;
	-GtkWidget-horizontal-separator: 0;
	-GtkWidget-vertical-separator: 0;
}

GtkComboBox.combobox-entry .entry:first-child,
GtkComboBox.combobox-entry .button:first-child {
	border-image-width: 3px 0 4px 3px;
	border-radius: 3px 0 0 3px;
	border-right-width: 0;
}

GtkComboBox.combobox-entry .entry:last-child,
GtkComboBox.combobox-entry .button:last-child {
	border-image-width: 3px 3px 4px 0;
	border-radius: 0 3px 3px 0;
	border-left-width: 0;
}

.primary-toolbar GtkComboBox.combobox-entry .entry:first-child,
.primary-toolbar GtkComboBox.combobox-entry .button:first-child {
	border-image-width: 4px 0 4px 4px;
	border-radius: 3px 0 0 3px;
	border-right-width: 0;
}

.primary-toolbar GtkComboBox.combobox-entry .entry:last-child,
.primary-toolbar GtkComboBox.combobox-entry .button:last-child {
	border-image-width: 4px 4px 4px 0;
	border-radius: 0 3px 3px 0;
	border-left-width: 0;
}

GtkComboBox.combobox-entry .entry:focus:first-child {
	box-shadow: inset 1px 2px alpha(@theme_selected_bg_color, 0.1),
		inset 1px 1px alpha(@theme_selected_bg_color, 0.1),
		inset 0 -1px alpha(@theme_selected_bg_color, 0.2);
}

GtkComboBox.combobox-entry .entry:focus:last-child {
	box-shadow: inset -1px 2px alpha(@theme_selected_bg_color, 0.1),
		inset -1px 1px alpha(@theme_selected_bg_color, 0.1),
		inset 0 -1px alpha(@theme_selected_bg_color, 0.2);
}

GtkComboBox.combobox-entry .button:last-child,
GtkComboBox.combobox-entry .button:hover:last-child,
GtkComboBox.combobox-entry .button:active:last-child,
GtkComboBox.combobox-entry .button:hover:active:last-child {
	box-shadow: inset 1px 0 @inset_dark_color, 
		inset 0 1px @entry_inset,
		inset 0 2px alpha(@entry_inset, 0.4);
}

GtkComboBox.combobox-entry .button:first-child,
GtkComboBox.combobox-entry .button:hover:first-child,
GtkComboBox.combobox-entry .button:active:first-child,
GtkComboBox.combobox-entry .button:hover:active:first-child {
	box-shadow: inset -1px 0 @inset_dark_color, 
		inset 0 1px @entry_inset,
		inset 0 2px alpha(@entry_inset, 0.4);
}

GtkComboBox.combobox-entry .button:insensitive:first-child {
	box-shadow: inset -1px 0 @inset_dark_color;
}

GtkComboBox.combobox-entry .button:insensitive:last-child {
	box-shadow: inset 1px 0 @inset_dark_color;
}

GtkComboBox.combobox-entry .button:hover,
GtkComboBox.combobox-entry .button:active,
GtkComboBox.combobox-entry .button:active:hover {
    color: shade (@theme_selected_bg_color, 0.80);
    transition: all 200ms ease-in;
}

GtkComboBox .button {
    color: @internal_element_color;
}

GtkComboBox .button:hover {
    color: shade (@theme_selected_bg_color, 0.80);
}

/********************
 * Various choosers *
 ********************/

GtkFontButton .separator,
GtkFileChooserButton .separator {
	/* always disable separators */
	-GtkWidget-wide-separators: true;
	-GtkWidget-horizontal-separator: 0;
	-GtkWidget-vertical-separator: 0;
}

GtkFontButton GtkLabel:last-child {
	color: mix(@theme_fg_color, @theme_bg_color, 0.35);
}

GtkFileChooserButton GtkImage:last-child {
	color: @internal_element_color;
}

/**************
 * Scrollbars *
 **************/

.scrollbar {
	background-image: none;
	border-style: solid;
	-GtkRange-trough-border: 0;
	-GtkScrollbar-has-backward-stepper: true;
	-GtkScrollbar-has-forward-stepper: true;
	-GtkRange-stepper-size: 16;
	-GtkRange-slider-width: 13;
	-GtkScrollbar-min-slider-length: 42; /* minimum size for the slider. sadly can't be in '.slider' where it belongs */

	-GtkRange-stepper-spacing: 0;
	-GtkRange-trough-under-steppers: 1;
}

.scrollbars-junction { /* the small square between scrollbars!!! */
	background-image: none;
	background-color: @theme_bg_color;
	border-width: 0;
	border-radius: 0;
	border-image: none;
	box-shadow: none;
}

.scrollbar.trough,
.scrollbar.trough.vertical {
	background-image: linear-gradient(to right,
		@scrollbar_trough,
		shade (@scrollbar_trough, 1.08));
	border-left-width: 1px;
	border-style: solid;
	border-color: shade (@theme_bg_color, 0.94);
	border-radius: 0;
	border-image: none;
}

.scrollbar.trough.horizontal {
	background-image: linear-gradient(to bottom,
		@scrollbar_trough,
		shade (@scrollbar_trough, 1.08));
	border-top-width: 1px;
	border-style: solid;
	border-color: shade (@theme_bg_color, 0.94);
	border-radius: 0;
	border-image: none;
}

.scrollbar.button,
.scrollbar.button:active,
.scrollbar.button:active:hover,
.scrollbar.button:insensitive {
	border-style: none;
	border-image: none;
	border-radius: 0;
	background-image: none;
	background-color: transparent;
}

.scrollbar.button:active,
.scrollbar.button:active:hover {
	background-color: alpha(shade(@scrollbar_trough, 0.8), 0.5);
}

.scrollbar.button.top:hover {
	box-shadow: inset 0 -1px mix(@scrollbar_slider, @scrollbar_trough, 0.8);
}

.scrollbar.button.bottom:hover {
	box-shadow: inset 0 1px mix(@scrollbar_slider, @scrollbar_trough, 0.8);
}

.scrollbar.button.right:hover {
	box-shadow: inset 1px 0 mix(@scrollbar_slider, @scrollbar_trough, 0.8);
}

.scrollbar.button.left:hover {
	box-shadow: inset -1px 0 mix(@scrollbar_slider, @scrollbar_trough, 0.8);
}

.scrollbar.button {
	color: @theme_fg_color;
}

.scrollbar.button:hover {
	color: @theme_fg_color;
}

.scrollbar.button:insensitive {
	color: @insensitive_fg_color;
}

.scrollbar.button:active {
	color: @theme_fg_color;
}

.scrollbar.slider.vertical {
	background-image: linear-gradient(to right,
		shade(@scrollbar_slider, 0.95),
		shade(@scrollbar_slider, 0.8));
	border-radius: 20px;
	border-style: solid;
	border-image: none;
	border-color: shade(@scrollbar_slider, 0.65);
	border-width: 1px;
}
/* ... */

